# material-colors-generator

./: Cargo.toml  README.md  flake.nix
src/: main.rs
